nginx-website/website-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: website
  name: website
  labels:
    app: website
spec:
  replicas: 3 #Gotta be HA
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
      - env:
        image: nginx:alpine
        imagePullPolicy: Always
        name: website
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            scheme: HTTP
            path: /
            port: 80
          initialDelaySeconds: 30
          timeoutSeconds: 30
