nginx-website/website-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: website
  name: website
  namespace: website
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: website
  sessionAffinity: None
  type: ClusterIP
